# libdiscid

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  HACKING  INSTALL  Makefile.am  README  appveyor.yml  autogen.sh  config-cmake.h.in  configure.ac  discid.def  libdiscid.pc.in  libdiscid.rc.in  versioninfo.rc.in
.github/workflows/: build.yml  docs.yml
cmake/: FindMusicbrainz5.cmake
examples/: Makefile.am  disc_metadata.c  discid.c  discid_sparse.c  discisrc.c
include/: Makefile.am  discid.h  discid_private.h
include/discid/: Makefile.am  discid.h  discid.h.in  discid_private.h  version.h.in
po/: Makevars  POTFILES.in  de.po  libdiscid.pot
src/: Makefile.am  base64.c  base64.h  disc.c  disc_bsd.c  disc_cdrdao.c  disc_darwin.c  disc_freebsd.c  disc_generic.c  disc_haiku.c  disc_linux.c  disc_netbsd.c  disc_openbsd.c  disc_scsi.c  disc_solaris.c  disc_toc.c  disc_unix.c  disc_win32.c  disc_win32_new.c  main.c  ntddcdrm.h  scsi.c  scsi.h  sha1.c  sha1.h  toc.c  unix.c  unix.h
test/: Makefile.am  test.c  test.h  test_core.c  test_disc.c  test_discid.c  test_put.c  test_read.c  test_read_full.c
